syntax = "proto3";

package juno.file_service.provider;

import "identifiers.proto";

import "file.proto";

service FileProviderDbService {
  rpc getProvider(GetFileProviderRequest) returns (FileProvider);
  rpc createProvider(CreateFileProviderRequest) returns (FileProvider);
  rpc deleteProvider(DeleteFileProviderRequest) returns (FileProvider);
  rpc updateProvider(UpdateFileProviderRequest) returns (FileProvider);
}

message FileProvider {
  string provider_id = 1;
  string provider_name = 2;
  repeated file.File file = 3;
  string url = 4;
}

message GetFileProviderRequest {
  string provider_id = 1;
}

message CreateFileProviderRequest {
  string provider_id = 1;
  string provider_name = 2;
  repeated file.File file = 3;
  string url = 4;
}

message UpdateFileProviderRequest {
  string provider_id = 1;
  string provider_name = 2;
  repeated file.File file = 3;
  string url = 4;
}

message DeleteFileProviderRequest {
  string provider_id = 1;
}
